@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.5 2004/02/03 20:49:34 hubertf Exp $
+$NetBSD: distinfo,v 1.6 2004/11/18 12:46:53 hubertf Exp $
 
-SHA1 (spamprobe-0.9h.tar.gz) = 34a4d5dc622570cc109a92f1a4b2222d4d3b08ff
-Size (spamprobe-0.9h.tar.gz) = 161164 bytes
+SHA1 (spamprobe-1.0a.tar.gz) = 4077b4b5280b29fa08b31b3131ee5cf005faefd7
+Size (spamprobe-1.0a.tar.gz) = 165747 bytes
